data/derived/fa15/progs/unify/prog0138.ml.out
Characters 26-48:
  let palindrome w = if w = listReverse(explode w) then true else false;;
                            ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string
